--- a/css/style.css
+++ b/css/style.css
@@ -874,4 +874,85 @@ h3.my-profesion
 		flex: 0 0 100%;
 		min-width: 100%;
 	}
+/* Footer Section */
+}
+.footer
+{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: black;
+	height: auto;
+	width: 100vh;
+	font-family: "Open Sans";
+	padding-top: 40px;
+	color:black;
+}
+.footer-content
+{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+}
+.footer-content h3
+{
+	font-size: 1.8rem;
+	font-weight: 400;
+	text-transform: capitalize;
+	line-height: 3rem;
+}
+.footer-content p
+{
+	min-width: 500px;
+	margin: 10px auto;
+	line-height: 28px;
+	font-size: 14px;
+}
+.socials
+{
+	list-style: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 1rem 0 3rem 0;
+}
+.socials li
+{
+	margin: 0 10px;
+}
+.socials a
+{
+	text-decoration: none;
+	color: black;
+}
+.socials a i
+{
+	font-size: 1.1rem;
+	transition: color .4s ease;
+}
+.socials a:hover i
+{
+	color: var(--skin-color);
+}
+.footer-bottom
+{
+	background: black transparent;
+	width: 100vh;
+	padding: 20px 0;
+	text-align: center;
+}
+.footer-bottom p
+{
+	font-style: 14px;
+	word-spacing: 2px;
+	text-transform: capitalize;
+}
+.footer-bottom span
+{
+	text-transform: uppercase;
+	opacity: .4;
+	font-weight: 200;
 }
